--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,16 @@
 body {
   font-family: sans-serif;
-}
-
-/* Make content area fill the entire browser window */
-html,
-.fullscreen {
-  display: flex;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-/* Center the content in the browser window */
-.container {
-  margin: auto;
   text-align: center;
 }
 
-.title {
-  font-size: 3rem;
+canvas {
+  display: block;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+
+button {
+  margin: 10px;
+  padding: 5px 10px;
+  font-size: 1.2em;
 }
