--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,11 @@
-body {
-  font-family: sans-serif;
-  text-align: center;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 canvas {
   display: block;
-  margin: 0 auto;
-  border: 1px solid black;
-}
-
-button {
-  margin: 10px;
-  padding: 5px 10px;
-  font-size: 1.2em;
+  margin: auto;
+  background-color: #ffffff;
 }
