--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,31 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+body {
+  font-family: sans-serif;
 }
 
-canvas {
-  display: block;
-  margin: auto;
-  background-color: #ffffff;
+#game {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.dice {
+  border: 1px solid black;
+  display: inline-block;
+  font-size: 80px;
+  height: 120px;
+  line-height: 120px;
+  margin-bottom: 50px;
+  width: 120px;
+}
+
+#roll-btn {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  font-size: 20px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 20px;
+  cursor: pointer;
 }
